@@ -378,6 +378,8 @@ struct map_session_data {
 	int duel_group; // duel vars [LuzZza]
 	int duel_invite;
 
+	int killerrid, killedrid;
+
 	char away_message[128]; // [LuzZza]
 
 	int cashPoints, kafraPoints;
